--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Joke | Fun</title>
 </head>
 <body>
-
-<div class="card w-75 mb-3">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Button</a>
+  <div class="">
+    <h1 class="text-center m-5">Welcome in Joke page <i class="bi bi-emoji-laughing"></i> Let's have fun now </h1>
   </div>
-</div>
+  <div class="card_container">
+    <div class="card mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Joke 1 :</h5>
+        <hr>
+        <p class="card-text">Yesterday I saw a guy spill all his Scrabble letters on the road. I asked him, “What’s the word on the street?”</p>
+        <a href="#" class="btn btn-primary">update</a>
+        <a href="#" class="btn btn-danger">delete</a>
+      </div>
+    </div>
+  </div>
     
 <script src="main.js"></script>
 </body>
